[Misc] Adapt test for Java 11